--- a/index.html
+++ b/index.html
@@ -3,54 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSS Road Network System 订购</title>
-    
+    <title>JSS PCG Tools</title>
     <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
     <script type="text/javascript">
-      // 这里的 Token 请替换为你刚才拿到的 pk_live_...
-      Paddle.Initialize({ 
-        token: "live_40e4b542e12ee1694df9f564cda" 
-      });
+      Paddle.Initialize({ token: "live_672f8e797429d8994c45c8191f8" });
     </script>
-
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f5f5f7; }
-        .card { background: white; padding: 2rem; border-radius: 18px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); text-align: center; max-width: 400px; }
-        h1 { font-size: 24px; color: #1d1d1f; margin-bottom: 10px; }
-        p { color: #86868b; line-height: 1.5; font-size: 14px; }
-        .price-tag { font-size: 28px; font-weight: bold; color: #1d1d1f; margin: 20px 0; }
-        .buy-btn { background-color: #0071e3; color: white; border: none; padding: 12px 30px; border-radius: 25px; font-size: 16px; font-weight: 600; cursor: pointer; transition: 0.3s; width: 100%; }
-        .buy-btn:hover { background-color: #0077ed; }
-        .notice { font-size: 12px; color: #b0b0b5; margin-top: 15px; }
+        body { font-family: sans-serif; background-color: #f5f5f7; padding: 40px 20px; display: flex; flex-direction: column; align-items: center; }
+        .container { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 20px; max-width: 1200px; width: 100%; }
+        .card { background: white; padding: 25px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); text-align: left; display: flex; flex-direction: column; }
+        h2 { font-size: 20px; margin: 0 0 10px 0; color: #1d1d1f; }
+        .desc { color: #666; font-size: 14px; line-height: 1.5; min-height: 45px; margin-bottom: 20px; }
+        .price-group { display: flex; gap: 10px; margin-top: auto; }
+        .btn { flex: 1; border: none; padding: 10px; border-radius: 8px; cursor: pointer; font-weight: 600; font-size: 13px; transition: 0.2s; }
+        .btn-monthly { background: #eef1f5; color: #0071e3; }
+        .btn-yearly { background: #0071e3; color: white; }
+        .btn:hover { opacity: 0.8; }
+        .notice { font-size: 11px; color: #b0b0b5; margin-top: 15px; text-align: center; }
     </style>
 </head>
 <body>
 
-<div class="card">
-    <h1>JSS Road Network System</h1>
-    <p>专业级 PCG 道路生成系统</p>
-    
-    <div class="price-tag">Yearly Subscription</div>
+<h1>JSS PCG Store</h1>
+<p style="margin-bottom: 40px;">You create, I automate.</p>
 
-    <button class="buy-btn" id="checkout-btn">立即订阅 (Yearly)</button>
-
-    <p class="notice">
-        Note: Includes 1 Hardware-Locked License. Requires activation on a specific device. One license per hardware ID. Cancel anytime.
-    </p>
-</div>
+<div id="product-list" class="container">
+    </div>
 
 <script type="text/javascript">
-  document.getElementById('checkout-btn').addEventListener('click', function() {
-    Paddle.Checkout.open({
-      items: [
-        {
-          // 这里的 Price ID 请替换为你刚才拿到的 pri_...
-          priceId: "pri_01kg0ambtr3dc4zfhy28rbyf3t",
-          quantity: 1
-        }
-      ]
-    });
+  // ✨ 以后有新产品，只需在下面这个括号里增加一行即可
+  const products = [
+    {
+      name: "JSS Road Network System",
+      desc: "Automated road network generation HDA for Houdini. Featuring Photoshop-style layer management for intuitive layout control. Includes 1 node-locked license; requires device activation.",
+      monthlyId: "pri_01kg069kn911jcesx11kz5yd4m",
+      yearlyId: "pri_01kg0ambtr3dc4zfhy28rbyf3t"
+    },
+    {
+      name: "JSS PSD to River",
+      desc: "Automated river generation HDA for Houdini. Featuring Photoshop-style layer management for intuitive channel sculpting. Includes 1 node-locked license; requires device activation.",
+      monthlyId: "pri_01kg1zefwhsxehxcxhtvrx9m05",
+      yearlyId: "pri_01kg1zgg64a1b696t9z52ws5yb"
+    }
+    // 新产品往这里加...
+  ];
+
+  // 自动化渲染逻辑
+  const listContainer = document.getElementById('product-list');
+  products.forEach(p => {
+    const card = document.createElement('div');
+    card.className = 'card';
+    card.innerHTML = `
+      <h2>${p.name}</h2>
+      <p class="desc">${p.desc}</p>
+      <div class="price-group">
+        <button class="btn btn-monthly" onclick="buy('${p.monthlyId}')">月付订阅</button>
+        <button class="btn btn-yearly" onclick="buy('${p.yearlyId}')">年付订阅</button>
+      </div>
+      <p class="notice">Requires 1 Hardware License per device.</p>
+    `;
+    listContainer.appendChild(card);
   });
+
+  function buy(pid) {
+    Paddle.Checkout.open({ items: [{ priceId: pid, quantity: 1 }] });
+  }
 </script>
 
 </body>
