--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
 
 <div id="product-list" class="container">
     </div>
+<h1>JSS PCG Store</h1>
+<p style="margin-bottom: 40px;">You create, I automate.</p>
 
+<div id="product-list" class="container"></div>
+
+<div style="max-width: 800px; margin: 40px auto; padding: 25px; background: #fff; border-radius: 12px; border: 1px dashed #0071e3; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
+    <h3 style="margin-top:0; color: #1d1d1f; border-bottom: 1px solid #eee; padding-bottom: 10px;">How to get your License?</h3>
+    <ol style="color: #555; font-size: 14px; line-height: 2; margin-top: 15px;">
+        <li><b>Purchase:</b> Choose a plan above and complete the checkout via Paddle.</li>
+        <li><b>Get HWID:</b> Open the HDA in Houdini; the Hardware ID will be displayed in the node's "License" tab.</li>
+        <li><b>Send Email:</b> Email your <b>Order Number</b> and <b>HWID</b> to <a href="mailto: jian_shua_shua@qq.com" style="color: #0071e3; font-weight: bold; text-decoration: none;"> jian_shua_shua@qq.com</a>.</li>
+        <li><b>Activation:</b> You will receive your unique License Key via email within 12-24 hours.</li>
+    </ol>
+</div>
 <script type="text/javascript">
   // ✨ 以后有新产品，只需在下面这个括号里增加一行即可
   const products = [
