--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       <h2>${p.name}</h2>
       <p class="desc">${p.desc}</p>
       <div class="price-group">
-        <button class="btn btn-monthly" onclick="buy('${p.monthlyId}')">月付订阅</button>
-        <button class="btn btn-yearly" onclick="buy('${p.yearlyId}')">年付订阅</button>
+        <button class="btn btn-monthly" onclick="buy('${p.monthlyId}')">Monthly</button>
+        <button class="btn btn-yearly" onclick="buy('${p.yearlyId}')">Yearly</button>
       </div>
       <p class="notice">Requires 1 Hardware License per device.</p>
     `;
